--- a/TestPullToRefresh/TestPullToRefresh.UWP/project.json
+++ b/TestPullToRefresh/TestPullToRefresh.UWP/project.json
@@ -1,5 +1,6 @@
 ﻿{
   "dependencies": {
+    "Acr.UserDialogs": "6.3.3",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
     "Xamarin.Forms": "2.3.3.175"
   },
